# chameleon-hardware

./: .gitignore  README.md
board/: project.kicad_sym  sch_frame.kicad_wks
board/cartridge/: cartridge.kicad_pcb  cartridge.kicad_pro  cartridge.kicad_sch  cartridge.kicad_sch-bak  coco.kicad_sch  fp-lib-table  host.kicad_sch  power.kicad_sch  rp2350.kicad_sch
board/coco-wedge/: coco-wedge.kicad_pcb  coco-wedge.kicad_pro  coco-wedge.kicad_sch  fp-lib-table  local.kicad_sym  sym-lib-table
board/extender/: extender.kicad_pcb  extender.kicad_pro  extender.kicad_sch
board/harness/: din.kicad_sch  harness.kicad_pcb  harness.kicad_pro  harness.kicad_sch  sym-lib-table
board/project.3dshapes/: Attend_112J.step  BatteryHolder_Keystone_3027_1x2016.step  EDAC_395-040-559-212.step  FM_3510RGBA_SG.step  GCT_USB4105.step  IN-PI33TBTPRPGPB.step  K3-1410S.step  Nidec_CUS-14TB.step  SK12D07VG4.step  TSA002A3518B.step  XUNPU_TF-115-BCP9.step
board/project.pretty/: Attend_112J.kicad_mod  BatteryHolder_Keystone_3026_1x2016.kicad_mod  BatteryHolder_Keystone_3027_1x2016.kicad_mod  C_0402_1005Metric_Pad0.53x0.47mm_Passthrough.kicad_mod  CoCo_Cart.kicad_mod  CoCo_ClearanceHole.kicad_mod  CoCo_MountingHole.kicad_mod  EDAC_395-040-559-212.kicad_mod  ESP32-S3-WROOM-1U.kicad_mod  FM-3510RGBA-SG.kicad_mod  Foxconn_WQ21823-DES1-7F.kicad_mod  GCT_USB4105.kicad_mod  HC-TYPE-C-16P-01B.kicad_mod  JLC_ToolingHole.kicad_mod  K3-1410S.kicad_mod  KH-TYPE-C-16P.kicad_mod  LED_1414_3535Metric.kicad_mod  L_Polarized_2016.kicad_mod  Nidec_CUS-14TB.kicad_mod  QFN-80-1EP_10x10mm_P0.4mm_EP3.4x3.4mm_ThermalVias.kicad_mod  RP2350-QFN-80-1EP_10x10_P0.4mm_EP3.4x3.4mm_ThermalVias.kicad_mod  SK12D07VG4.kicad_mod  SOT-23.kicad_mod  (+4 more)
docs/: timing.txt
enclosure/: ChameleonCase.FCStd  ChameleonCase2.FCStd
firmware/: .gitignore  CMakeLists.txt  Cargo.toml  sdkconfig.defaults
firmware/kernel/: Cargo.toml  build.rs
firmware/kernel/src/: main.rs
(+3 files in other folders)
